--- a/.github/workflows/unity-webgl.yml
+++ b/.github/workflows/unity-webgl.yml
@@ -1,67 +1,36 @@
-name: Unity WebGL CI
+name: Unity License Check
 
 on:
+  pull_request:
   push:
     branches: [ main ]
-  pull_request:
+  workflow_dispatch:
 
 permissions:
   contents: read
-  pages: write      # for GitHub Pages deploy
-  id-token: write   # for GitHub Pages deploy
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
 
 jobs:
-  build-webgl:
+  activate-license:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # Cache Unity Library to speed up imports
-      - name: Cache Library
-        uses: actions/cache@v4
-        with:
-          path: ./Library
-          key: Library-WebGL-${{ hashFiles('Packages/manifest.json') }}
-          restore-keys: |
-            Library-WebGL-
-
-      # Build WebGL using the Unity license secret as an environment variable
-      - name: Build WebGL
-        uses: game-ci/unity-builder@v4
-        with:
-          projectPath: .
-          unityVersion: 2022.3.10f1
-          targetPlatform: WebGL
-          buildName: WebGLBuild
+      # Optional: fail fast if secret is missing
+      - name: Verify UNITY_LICENSE is present
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        run: |
+          if [ -z "$UNITY_LICENSE" ]; then
+            echo "❌ UNITY_LICENSE secret is not set."
+            exit 1
+          fi
+          echo "::add-mask::$UNITY_LICENSE"
 
-      # Upload build artifact for PRs / debugging
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
+      # Activate Unity via GameCI
+      - name: Activate Unity
+        uses: game-ci/unity-activate@v4
         with:
-          name: WebGLBuild
-          path: build/WebGL
-
-      # Upload Pages artifact for deployment
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: build/WebGL
-
-  deploy:
-    if: github.ref == 'refs/heads/main'
-    needs: build-webgl
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          unityVersion: 2021.3.41f1            # <- set your exact version
+          activationMode: server               # default; fine to omit
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
