--- a/.github/workflows/unity-webgl.yml
+++ b/.github/workflows/unity-webgl.yml
@@ -21,24 +21,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Reclaim disk space on the runner before pulling the Unity Docker image
-      - name: Free disk space (Ubuntu)
-        uses: jlumbroso/free-disk-space@v1.3.1
-        with:
-          tool-cache: true
-          android: true
-          dotnet: true
-          haskell: true
-          large-packages: true
-          docker-images: false   # keep Docker engine; we'll prune images next
-          swap-storage: true
-      - name: Prune Docker (images/volumes)
-        run: |
-          docker system prune -af || true
-          docker volume prune -f || true
-      - name: Show free space
-        run: df -h
-
       - name: Cache Library
         uses: actions/cache@v4
         with:
@@ -68,7 +50,9 @@ jobs:
         with:
           projectPath: .
           unityVersion: 6000.0.60f1
-          targetPlatform: WebGL            # kept for artifact path naming
+          # You can keep targetPlatform for artifact path naming,
+          # but the profile controls platform/settings.
+          targetPlatform: WebGL
           buildName: WebGLBuild
           buildProfile: "Assets/Settings/Build Profiles/WebBuild.asset"
         env:
