--- a/.github/workflows/delete_workflows.yml
+++ b/.github/workflows/delete_workflows.yml
@@ -5,11 +5,11 @@ on:
     inputs:
       workflow:
         description: 'Workflow identifier: file path (.github/workflows/*.yml), numeric ID, or display name'
-        required: true
+        required: false
         default: '.github/workflows/unity-webgl-ci.yml'
       keep:
         description: 'How many most-recent runs to keep'
-        required: true
+        required: false
         default: '10'
 
 permissions:
@@ -22,20 +22,19 @@ jobs:
     steps:
       - name: Delete old runs (keep latest N)
         uses: actions/github-script@v7
+        env:
+          WF:   ${{ github.event.inputs.workflow || '.github/workflows/unity-webgl-ci.yml' }}
+          KEEP: ${{ github.event.inputs.keep || '10' }}
         with:
           script: |
             const owner = context.repo.owner;
             const repo  = context.repo.repo;
 
-            const keep = Math.max(parseInt(core.getInput('keep', { required: true }), 10) || 10, 0);
-            const wfInput = core.getInput('workflow', { required: true }).trim();
+            const keep = Math.max(parseInt(process.env.KEEP || '10', 10), 0);
+            const wfInput = (process.env.WF || '.github/workflows/unity-webgl-ci.yml').trim();
 
             // Resolve workflow_id:
-            // - If ends with .yml/.yaml -> treat as file path
-            // - Else if numeric -> use as ID
-            // - Else -> search by display name
             let workflow_id = wfInput;
-
             const endsWithYaml = wfInput.endsWith('.yml') || wfInput.endsWith('.yaml');
             const numericId = /^\d+$/.test(wfInput);
 
@@ -45,11 +44,9 @@ jobs:
                 owner, repo, per_page: 100
               });
               const found = all.find(w => w.name === wfInput);
-              if (!found) {
-                core.setFailed(`Could not find a workflow with display name "${wfInput}". Use the workflow file path (e.g. ".github/workflows/unity-webgl-ci.yml") or numeric ID.`);
-                return;
-              }
-              workflow_id = found.id; // numeric
+              if (!found) core.setFailed(`Could not find a workflow named "${wfInput}". Use the file path (e.g. ".github/workflows/unity-webgl-ci.yml") or the numeric ID.`);
+              if (!found) return;
+              workflow_id = found.id;
               core.info(`Resolved display name to workflow ID: ${workflow_id}`);
             } else if (endsWithYaml) {
               core.info(`Using workflow file: ${workflow_id}`);
@@ -57,25 +54,17 @@ jobs:
               core.info(`Using numeric workflow ID: ${workflow_id}`);
             }
 
-            // List all runs (newest first), keep N, delete the rest
-            let page = 1;
-            let deleted = 0;
-            let total = 0;
-
-            // Gather all runs first (so "keep" applies globally, not per page)
             const allRuns = await github.paginate(
               github.rest.actions.listWorkflowRuns,
               { owner, repo, workflow_id, per_page: 100 }
             );
 
-            total = allRuns.length;
-            core.info(`Found ${total} runs for workflow ${workflow_id}. Keeping ${keep}, candidates for deletion: ${Math.max(total - keep, 0)}.`);
-
-            const toDelete = allRuns.slice(keep); // skip newest "keep" runs
+            core.info(`Found ${allRuns.length} runs. Keeping ${keep}.`);
+            const toDelete = allRuns.slice(keep);
+            let deleted = 0;
             for (const run of toDelete) {
               core.info(`🗑️ Deleting run ${run.id} (${run.name}) created at ${run.created_at}`);
               await github.rest.actions.deleteWorkflowRun({ owner, repo, run_id: run.id });
               deleted++;
             }
-
-            core.info(`✅ Done. Deleted ${deleted} runs, kept ${Math.min(keep, total)} most recent.`);
+            core.info(`✅ Done. Deleted ${deleted} runs, kept ${Math.min(keep, allRuns.length)}.`);
