--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Actions
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
@@ -12,14 +12,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-
-      # Cache
-      - uses: actions/cache@v3
-        with:
-          path: Library
-          key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
-          restore-keys: |
-            Library-
 
       # Build
       - name: Build project
